force-app/main/default/objects/DM_Fulfillment_Line_Item__c/DM_Fulfillment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Line Item</label>
    <nameField>
        <displayFormat>FLI-{0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>