force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety__c</fullName>
    <formula>if( DM_Sale_Line_Item__r.DM_Sale__r.DM_Direct_to_Market__c = true, DM_Harvest__r.DM_Crop_Variety__c ,
DM_Inventory__r.DM_Crop_Variety__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crop Variety</label>
    <type>Text</type>
</CustomField>