force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Direct_to_Market__c.field-meta.xml
<CustomField>
    <fullName>DM_Direct_to_Market__c</fullName>
    <formula>DM_Sale_Line_Item__r.DM_Sale__r.DM_Direct_to_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct to Market</label>
    <type>Checkbox</type>
</CustomField>