force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>DM_Fulfillment__c</fullName>
    <label>Fulfillment #</label>
    <referenceTo>DM_Fulfillment__c</referenceTo>
    <relationshipLabel>Fulfillment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>