force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Harvest__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Harvest #</label>
    <referenceTo>DM_Harvest__c</referenceTo>
    <relationshipLabel>Fulfillment Line Items</relationshipLabel>
    <relationshipName>Fulfillment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>