force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Inventory__c.field-meta.xml
<CustomField>
    <fullName>DM_Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory #</label>
    <referenceTo>DM_Inventory__c</referenceTo>
    <relationshipLabel>Fulfillment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>