force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>