force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Quantity_UOM__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_UOM__c</fullName>
    <formula>if( DM_Sale_Line_Item__r.DM_Sale__r.DM_Direct_to_Market__c = true,  text(DM_Harvest__r.DM_Harvest_UOM__c ),
DM_Inventory__r.DM_Sale_UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity UOM</label>
    <type>Text</type>
</CustomField>