force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Sale__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale__c</fullName>
    <label>Sale #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>