force-app/main/default/objects/DM_Fulfillment_Line_Item__c/fields/DM_Sale_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale_Line_Item__c</fullName>
    <label>Sale Line Item #</label>
    <referenceTo>DM_Sale_Line_Item__c</referenceTo>
    <relationshipLabel>Fulfillment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>